--- a/pkg/web/templates/download.html
+++ b/pkg/web/templates/download.html
@@ -18,12 +18,21 @@
                     <hr />
 
                     <div class="row mb-3">
-                       <div class="col-md-6">
+                        <div class="col">
+                            <label for="downloadAction" class="form-label">Post Download Action</label>
+                            <select class="form-select" id="downloadAction" name="downloadAction">
+                                <option value="symlink" selected>Symlink</option>
+                                <option value="download">Download</option>
+                                <option value="none">None</option>
+                            </select>
+                            <small class="text-muted">Choose how to handle the added torrent (Default to symlinks)</small>
+                        </div>
+                       <div class="col">
                            <label for="downloadFolder" class="form-label">Download Folder</label>
                            <input type="text" class="form-control" id="downloadFolder" name="downloadFolder" placeholder="Enter Download Folder (e.g /downloads/torrents)">
                            <small class="text-muted">Default is your qbittorent download_folder</small>
                        </div>
-                        <div class="col-md-6">
+                        <div class="col">
                             <label for="arr" class="form-label">Arr (if any)</label>
                             <input type="text" class="form-control" id="arr" name="arr" placeholder="Enter Category (e.g sonarr, radarr, radarr4k)">
                             <small class="text-muted">Optional, leave empty if not using Arr</small>
@@ -45,12 +54,6 @@
                     {{ end }}
 
                     <div class="row mb-3">
-                        <div class="col-md-2 mb-3">
-                            <div class="form-check d-inline-block me-3">
-                                <input type="checkbox" class="form-check-input" id="isSymlink" name="notSymlink">
-                                <label class="form-check-label" for="isSymlink">No Symlinks</label>
-                            </div>
-                        </div>
                         <div class="col-md-2 mb-3">
                             <div class="form-check d-inline-block">
                                 <input type="checkbox" class="form-check-input" name="downloadUncached" id="downloadUncached">
@@ -74,21 +77,21 @@
         document.addEventListener('DOMContentLoaded', () => {
             const loadSavedDownloadOptions = () => {
                 const savedCategory = localStorage.getItem('downloadCategory');
-                const savedSymlink = localStorage.getItem('downloadSymlink');
+                const savedAction = localStorage.getItem('downloadAction');
                 const savedDownloadUncached = localStorage.getItem('downloadUncached');
                 document.getElementById('arr').value = savedCategory || '';
-                document.getElementById('isSymlink').checked = savedSymlink === 'true';
+                document.getElementById('downloadAction').value = savedAction || 'symlink';
                 document.getElementById('downloadUncached').checked = savedDownloadUncached === 'true';
                 document.getElementById('downloadFolder').value = localStorage.getItem('downloadFolder') || downloadFolder || '';
             };
 
             const saveCurrentDownloadOptions = () => {
                 const arr = document.getElementById('arr').value;
-                const isSymlink = document.getElementById('isSymlink').checked;
+                const downloadAction = document.getElementById('downloadAction').value;
                 const downloadUncached = document.getElementById('downloadUncached').checked;
                 const downloadFolder = document.getElementById('downloadFolder').value;
                 localStorage.setItem('downloadCategory', arr);
-                localStorage.setItem('downloadSymlink', isSymlink.toString());
+                localStorage.setItem('downloadAction', downloadAction);
                 localStorage.setItem('downloadUncached', downloadUncached.toString());
                 localStorage.setItem('downloadFolder', downloadFolder);
             };
@@ -136,7 +139,7 @@
 
                     formData.append('arr', document.getElementById('arr').value);
                     formData.append('downloadFolder', document.getElementById('downloadFolder').value);
-                    formData.append('notSymlink', document.getElementById('isSymlink').checked);
+                    formData.append('action', document.getElementById('downloadAction').value);
                     formData.append('downloadUncached', document.getElementById('downloadUncached').checked);
                     formData.append('debrid', document.getElementById('debrid') ? document.getElementById('debrid').value : '');
 
@@ -168,7 +171,7 @@
 
             // Save the download options to local storage when they change
             document.getElementById('arr').addEventListener('change', saveCurrentDownloadOptions);
-            document.getElementById('isSymlink').addEventListener('change', saveCurrentDownloadOptions);
+            document.getElementById('downloadAction').addEventListener('change', saveCurrentDownloadOptions);
 
             // Read the URL parameters for a magnet link and add it to the download queue if found
             const urlParams = new URLSearchParams(window.location.search);
